force-app/main/default/objects/custom_create53__c/custom_create53__c.object-meta.xml
<CustomObject>
    <label>Custom created object53</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects53</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>