force-app/main/default/objects/custom_create53__c/fields/custom_create_53field507__c.field-meta.xml
<CustomField>
    <fullName>custom_create_53field507__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 53field507</label>
    <type>Checkbox</type>
</CustomField>