force-app/main/default/objects/custom_create53__c/fields/custom_create_53field615__c.field-meta.xml
<CustomField>
    <fullName>custom_create_53field615__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 53field615</label>
    <type>Checkbox</type>
</CustomField>